purchaseOrderNumber and purchaseOrderDate in the field to map the purchase order properly to sales invoice.
